--- a/html/index.html
+++ b/html/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="../assets/M.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="../assets/indexfav.jpg">
   
   <title>Home</title>
 
@@ -15,7 +15,7 @@
   />
   <meta
     name="keywords"
-    content="movies,reviews"
+    content="movies,reviews,home,index,coraline,joker,benjamin button"
   />
   <link rel="stylesheet" href="../Styles/styleIndex.css">
 
