--- a/html/coraline.html
+++ b/html/coraline.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="../assets/M.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="../assets/SmovieFav.jpg">
   
   <title>Coraline y la puerta secreta</title>
 
