changes about responsiveness
a

--- a/html/about.html
+++ b/html/about.html
@@ -64,8 +64,8 @@
       <main>
         <article class="content">
             <div class="info">
-            <h1>Soy simplemente una pagina de reviews</h1>
-            <p>simplemente lo que debo ser una pagina de reviews que espera ser actualizada jaja :C</p>
+            <h1>Encuentra otra perpectiva</h1>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquam fugit magni voluptatum numquam reiciendis architecto ratione. Odio illo corporis accusamus.</p>
             <a href="contact.html"><button>contact</button></a>  
             </div>
             <img src="../assets/cine.webp" alt="imagen de un cine" width="100px" height="100px">
